deploy/0-namespaces.yaml
- apiVersion: v1
  kind: Namespace
  metadata:
    name: api
- apiVersion: v1
  kind: Namespace
  metadata:
    name: web
