deploy/deploy-poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  # namespace: tripinsights
  labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
        - name: poi
          image: registryvpg9012.azurecr.io/tripinsights/poi:1.0
          volumeMounts:
            - mountPath: "/secrets"
              name: dbsecrets
              readOnly: true
          ports:
            - containerPort: 80
      volumes:
        - name: dbsecrets
          secret:
            secretName: db-secrets
            items:
              - key: SQL.SERVER
                path: SQL_SERVER
              - key: SQL.USER
                path: SQL_USER
              - key: SQL.PASSWORD
                path: SQL_PASSWORD
