deploy/deploy-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: tripinsights
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
        - name: trips
          image: registryvpg9012.azurecr.io/tripinsights/trips:1.0
          volumeMounts:
            - mountPath: "/secrets"
              name: dbsecrets
              readOnly: true
          ports:
            - containerPort: 80
      volumes:
        - name: dbsecrets
          secret:
            secretName: db-secrets
            items:
              - key: SQL.SERVER
                path: SQL_SERVER
              - key: SQL.USER
                path: SQL_USER
              - key: SQL.PASSWORD
                path: SQL_PASSWORD
