deploy/deploy-tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  namespace: tripinsights
  labels:
    app: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
        - name: tripviewer
          image: registryvpg9012.azurecr.io/tripinsights/tripviewer:1.0
          ports:
            - containerPort: 80
