deploy/deploy-user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
        - name: user-java
          image: registryvpg9012.azurecr.io/tripinsights/user-java:1.0
          volumeMounts:
            - mountPath: "/secrets"
              name: dbsecrets
              readOnly: true
          ports:
            - containerPort: 80
      volumes:
        - name: dbsecrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-team3kv-user-msi"
