deploy/deploy-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: tripinsights
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
        - name: userprofile
          image: registryvpg9012.azurecr.io/tripinsights/userprofile:1.0
          volumeMounts:
            - mountPath: "/secrets"
              name: dbsecrets
              readOnly: true
          ports:
            - containerPort: 80
      volumes:
        - name: dbsecrets
          secret:
            secretName: db-secrets
            items:
              - key: SQL.SERVER
                path: SQL_SERVER
              - key: SQL.USER
                path: SQL_USER
              - key: SQL.PASSWORD
                path: SQL_PASSWORD
