deploy/deploy_user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: tripinsights
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
        - name: user-java
          image: registryvpg9012.azurecr.io/tripinsights/user-java:1.0
          volumeMounts:
            - mountPath: "/secrets"
              name: dbsecrets
              readOnly: true
          ports:
            - containerPort: 80
      volumes:
        - name: dbsecrets
          secret:
            secretName: db-secrets
            items:
              - key: SQL.SERVER
                path: SQL_SERVER
              - key: SQL.USER
                path: SQL_USER
              - key: SQL.PASSWORD
                path: SQL_PASSWORD
