deploy/service-trips.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips
spec:
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
