deploy/service-userprofile.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: tripinsights
spec:
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
