deploy/services-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  selector:
    app: user-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
